# 0g-da-encoder

./: .gitignore  Cargo.toml  README.md  test.sh
.github/workflows/: ci.yml
crates/amt/: Cargo.toml  pp
crates/amt/src/: blob.rs  deferred_verification.rs  ec_algebra.rs  ldt_params.rs  lib.rs  power_tau.rs  proofs.rs  utils.rs  verify_params.rs
crates/amt/src/blob/: encode.rs  mod.rs  verify.rs
crates/amt/src/prove_params/: fast_serde.rs  fast_serde_bn254.rs  generate.rs  interfaces.rs  mod.rs  prove.rs  prove_gpu.rs  serde.rs  tests.rs  verify.rs
crates/encoder/: Cargo.toml
crates/encoder/src/: constants.rs  lib.rs  raw_blob.rs  raw_data.rs  utils.rs
crates/encoder/src/amt/: blob.rs  error.rs  mod.rs  slice.rs
crates/encoder/src/encoder/: blob.rs  error.rs  light_slice.rs  mod.rs  slice.rs
crates/encoder/src/merkle/: blob.rs  error.rs  mod.rs  slice.rs
crates/ppot2ark/: Cargo.toml  gen_test_ppot.sh
crates/ppot2ark/src/: adapter.rs  lib.rs  main.rs
crates/recovery/: Cargo.toml
crates/recovery/src/: data_poly.rs  data_times_zpoly.rs  error.rs  lib.rs  poly.rs  utils.rs  zpoly.rs
dev_support/: build_params.sh  check_cuda.sh  download_params.sh  test.sh
grpc/: Cargo.toml  build.rs
grpc/benches/: deferred_signer.rs  ec-fft.rs  encoder.rs  process_data.rs  signer.rs
grpc/proto/: encoder.proto
grpc/src/: lib.rs  service.rs
run/: config.toml
server/: Cargo.toml
server/src/: main.rs
stress/: Cargo.toml
stress/src/: main.rs
