[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zg-encoder = { workspace = true }
amt = { workspace = true }
ark-std = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
rand = "0.8"

# once_cell = "1.19.0"
rayon = { workspace = true, optional = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

prost = "0.12.3"
tonic = "0.11.0"
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "3.2.5", features = ["cargo"] }
config = "0.14.0"


[build-dependencies]
tonic-build = { version="0.11.0", features = ["prost"] }

[dev-dependencies]
rand = "0.8"
test-case = { version = "1.2.3" }
criterion = { version = "0.5.1", default-features = false }
ark-poly = { version = "0.4.0" }
zg-encoder = { workspace = true, features = ["testonly_code"]}
once_cell = "1.19"

[features]
default = []
parallel = [ "zg-encoder/parallel", "ark-poly/parallel", "rayon", "ark-std/parallel" ]
cuda = [ "zg-encoder/cuda" ]

[[bench]]
name = "encoder"
harness = false

[[bench]]
name = "process_data"
harness = false


[[bench]]
name = "signer"
harness = false

[[bench]]
name = "deferred_signer"
harness = false

[[bench]]
name = "ec-fft"
harness = false
