[package]
name = "amt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = { version = "0.12", default-features = false }
rayon = { workspace = true, optional = true }
base64 = "0.22"
rand = "0.8"

ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"

once_cell = "1.19"
ark-bn254 = "0.4"
parking_lot = { version = "0.12", optional = true }

ag-types = { workspace = true, optional = true }
ag-cuda-ec = { workspace = true, optional = true }

anyhow = "1"
tracing = "0.1.40"
tracing-subscriber = { workspace = true }

[dev-dependencies]

[features]
default = []
parallel = ["ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon"]
cuda = ["ag-types", "ag-cuda-ec", "parking_lot"]
cuda-bn254 = ["cuda", "ag-cuda-ec/bn254"]
cuda-bls12-381 = ["cuda", "ag-cuda-ec/bls12-381"]

[[bin]]
name = "build_params"
test = false
bench = false